Check that splits reference the same account before matching them.

This check was present in the old transaction matcher but was lost
during the refactoring done by Łukasz. Strange though in the comment
of the splitsMatch method the condition was still there.

BUG: 323788
CCMAIL: lukasz@maszczynski.net