kmymoney/converter/transactionmatchfinder.cpp
@@ -85,10 +85,16 @@ bool TransactionMatchFinder::splitsAreDuplicates(const MyMoneySplit& split1, con
 
 bool TransactionMatchFinder::splitsMatch(const MyMoneySplit& importedSplit, const MyMoneySplit& existingSplit, int amountVariation) const
 {
-  return (splitsBankIdsMatch(importedSplit, existingSplit) &&
+  return (splitsAccountsMatch(importedSplit, existingSplit) &&
+          splitsBankIdsMatch(importedSplit, existingSplit) &&
           splitsAmountsMatch(importedSplit, existingSplit, amountVariation) &&
           splitsPayeesMatchOrEmpty(importedSplit, existingSplit) &&
           !existingSplit.isMatched());
+}
+
+bool TransactionMatchFinder::splitsAccountsMatch(const MyMoneySplit & split1, const MyMoneySplit & split2) const
+{
+  return split1.accountId() == split2.accountId();
 }
 
 bool TransactionMatchFinder::splitsAmountsMatch(const MyMoneySplit& split1, const MyMoneySplit& split2, int amountVariation) const
